# mdr

./: CHANGELOG.md  Cargo.toml  PACKAGING.md  README.md  SPEC.md  flake.nix  test.md
.github/workflows/: ci.yml  release.yml
bench/: large.md  medium.md  mermaid-heavy.md  small.md
snap/: snapcraft.yaml
src/: main.rs
src/backend/: egui.rs  mod.rs  tui.rs  webview.rs
src/core/: icon.rs  markdown.rs  mermaid.rs  mod.rs  search.rs  toc.rs  watcher.rs
