[package]
name = "mdr"
version = "0.1.0"
edition = "2021"
description = "A lightweight Markdown viewer with live reload and multiple rendering backends"

[features]
default = ["egui-backend", "webview-backend", "tui-backend"]
egui-backend = ["dep:eframe", "dep:egui_commonmark", "dep:resvg", "dep:usvg", "dep:tiny-skia"]
webview-backend = ["dep:wry", "dep:tao"]
tui-backend = ["dep:ratatui", "dep:crossterm", "dep:ratatui-image", "dep:image", "dep:ureq"]

[dependencies]
# Core
clap = { version = "4", features = ["derive"] }
comrak = { version = "0.38", default-features = false, features = ["syntect"] }
notify = "8"
notify-debouncer-mini = "0.6"
mermaid-rs-renderer = { version = "0.1.2", default-features = false }
regex = "1"
serde_json = "1"
base64 = "0.22"

# egui backend
eframe = { version = "0.33", optional = true }
egui_commonmark = { version = "0.22", features = ["better_syntax_highlighting", "load-images", "svg", "embedded_image"], optional = true }
resvg = { version = "0.45", optional = true }
usvg = { version = "0.45", optional = true }
tiny-skia = { version = "0.11", optional = true }

# webview backend
wry = { version = "0.50", optional = true }
tao = { version = "0.33", optional = true }

# tui backend
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
ratatui-image = { version = "4.1", optional = true }
image = { version = "0.25", optional = true, default-features = false, features = ["png", "jpeg", "gif", "webp"] }
ureq = { version = "2", optional = true }
